/**
 * @author Japhy
 * @since 2020/9/15 18:47
 */
public class Wizard {

    private String name;

    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }
}
