/**
 * @author Japhy
 * @since 2020/9/15 18:46
 */
public interface WizardTower {

    void enter(Wizard wizard);
}
