@startuml

package com.japhy.design.proxy {
    interface WizardTower {
        + enter(wizard: Wizard)
    }
    class IvoryTower {
        + enter(wizard: Wizard)
    }
    class Wizard {
        - name
    }
    class WizardTowerProxy {
        - NUM_WIZARDS_ALLOWED: int
        - numWizards: int
        - tower: WizardTower
        + enter(wizard: Wizard)
        + wizardTowerProxy(tower: WizardTower)
    }
    WizardTower .> Wizard
    IvoryTower ..|> WizardTower
    WizardTowerProxy "1" o--> "1" WizardTower
    WizardTowerProxy ..|> WizardTower
}
@enduml